--- a/.github/workflows/build_on_push.yaml
+++ b/.github/workflows/build_on_push.yaml
@@ -31,6 +31,9 @@ jobs:
         with:
           node-version: lts/*
           cache: 'pnpm' # Set this to npm, yarn or pnpm.
+    
+      - name: install pnpm
+        run: npm i -g pnpm
 
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable # Set this to dtolnay/rust-toolchain@nightly
