--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,8 @@ axum = "0.8.4"
 hyper = {version = "1.6.0", features = ["full"] }
 hyper-util = {version = "0.1.16", features= ["full"] }
 hyper-tls = "0.6.0"
+
+[target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.26.1"
 objc = "0.2.7"
 objc2 = "0.6.2"
